# aoc

./: .flake8  .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  12.py  Cargo.toml  README.md  add_solution.py  get_inputs.py  justfile  new.py  print_results.py  pyproject.toml  results_display.py  results_lib.py  run.py  run_solvers.py  template.py  utils.py
.config/: .gitignore  README.md
2021/: .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  README.md
2021/01/: sol.py
2021/02/: sol.py
2021/03/: sol.py
2021/04/: sol.py
2021/day02/: sol.py
2022/: 03.py  04.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2023/: 01.py  02.py
inputs/full/: README.md
lib/: __init__.py  display.py  results.py  results_display.py  utils.py
py/: pyproject.toml  run.py  template.py
py/sols/: 202201.py  202202.py  202203.py  202205.py  202207.py  utils.py  (+11 more)
rs/: Cargo.toml  run.sh
sols/: 202101.py  202102.py  202103.py  202104.py  202111.py  202112.py  202114.py  202115.py  202116.py  202119.py  202122.py  202125.py  202201.py  202202.py  202204.py  202205.py  202206.py  202208.py  202209.py  202210.py  202211.py  202212.py  202214.py  202217_input.txt  202218.py  202219.py  202220.py  202220_input.txt  202301.py  202302.py  202303.py  202304.py  202305.py  solutions.csv  solutions.json  utils.py
src/: lib.rs
(+177 files in other folders)
