[project]
name = "aoc"
version = "0.1.0"
description = "Solvers for Advent of Code"
requires-python = ">=3.14"
dependencies = [
    "tabulate>=0.9",
    "requests>=2.32",
    "rich>=13.9.4",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "matplotlib>=3.10.8",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
fix=true
